--- a/pc/public/index.html
+++ b/pc/public/index.html
@@ -24,6 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+       
+    <!-- 百度地图-秘钥 -->
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=B7dm6TMatflSYBPc5ZS51LnIXBmifqoH"></script>
+    <!--百度地图-加载鼠标绘制工具-->
+    <script type="text/javascript" src="https://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js"></script>
+    <link rel="stylesheet" href="https://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.css" />
+    
     <title>React App</title>
   </head>
   <body>
